--- a/model01/main.ipynb
+++ b/model01/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -368,6 +368,25 @@
    ],
    "source": [
     "max(h['val_accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reversed_labels = {v: k for k, v in Train_Generator.class_indices.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"class_labels.json\", \"w\") as f:\n",
+    "    json.dump(reversed_labels, f)"
    ]
   },
   {
